--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build frontend Docker image
-        run: docker build -t frontend-test ./frontend
+        run: docker build -t image-gallery-frontend .
+
+      - name: Build backend Docker image
+        run: docker build -t image-gallery-backend ./backend
