--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
-name: CI
+name: Frontend CI/CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
@@ -13,8 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build frontend Docker image
-        run: docker build -t image-gallery-frontend .
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build backend Docker image
-        run: docker build -t image-gallery-backend ./backend
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/image-gallery-frontend ./ueK223_team-5-Image-Gallery_Frontend
+
+      - name: Push to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/image-gallery-frontend
