--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,34 @@
-name: Frontend CI/CD
+name: CI/CD Full Pipeline
 
 on:
   push:
     branches: [main]
 
 jobs:
-  build:
+  build-frontend:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build Docker image
+      - name: Build Frontend image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/image-gallery-frontend ./ueK223_team-5-Image-Gallery_Frontend
-
-      - name: Push to Docker Hub
+      - name: Push Frontend image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/image-gallery-frontend
+
+  deploy:
+    needs: build-frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd ~/image-gallery
+            docker compose pull
+            docker compose up -d
