--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Build Frontend image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/image-gallery-frontend ./ueK223_team-5-Image-Gallery_Frontend
+
       - name: Push Frontend image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/image-gallery-frontend
 
@@ -20,8 +23,7 @@ jobs:
     needs: build-frontend
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Deploy via SSH
+      - name: Deploy + Health Check via SSH
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -29,24 +31,17 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            set -e
             cd ~/image-gallery
+
+            echo "Pulling images..."
             docker compose pull
+
+            echo "Starting containers..."
             docker compose up -d
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        script: |
-          cd ~/image-gallery
-          docker compose pull
-          docker compose up -d
 
-    - name: Health Check (Frontend)
-      run: |
-        echo "Waiting for application..."
-        sleep 15
-        curl -f https://daphne.dev.noseryoung.ch
+            echo "Waiting for app..."
+            sleep 15
 
-
+            echo "Health check..."
+            curl -f https://daphne.dev.noseryoung.ch
