--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,9 @@ jobs:
       - name: Notify Slack
         if: success() || failure()
         run: |
-          STATUS="✅ SUCCESS"
+          STATUS="SUCCESS ✅"
           if [ "${{ job.status }}" != "success" ]; then
-          STATUS="❌ FAILED"
+          STATUS="FAILED ❌"
           fi
           curl -X POST -H 'Content-type: application/json' \
             --data "{\"text\": \"Deployment ${STATUS} for image-gallery\"}" \
