--- a/ueK223_team-5-Image-Gallery_Frontend/package.json
+++ b/ueK223_team-5-Image-Gallery_Frontend/package.json
@@ -1,4 +1,11 @@
 {
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "test": "vitest run",
+    "build": "yarn test && vite build",
+    "preview": "vite preview"
+  },
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +23,7 @@
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^18.3.7",
     "@types/yup": "^0.32.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "array-move": "^2.2.1",
     "axios": "^0.21.1",
     "caniuse-lite": "^1.0.30001762",
@@ -39,28 +46,24 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.7.1"
   },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest"
-  },
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@faker-js/faker": "^7.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/react-hooks": "^3.4.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "axios-mock-adapter": "^2.1.0",
     "cypress": "^15.9.0",
+    "jsdom": "^27.4.0",
     "react-is": "^16.13.1",
     "react-test-renderer": "^18.2.0",
     "start-server-and-test": "^2.1.3",
-    "vitest": "^0.32.0"
+    "vitest": "^4.0.18"
   },
   "resolutions": {
     "caniuse-lite": "1.0.30001762"
