--- a/ueK223_team-5-Image-Gallery_Frontend/package.json
+++ b/ueK223_team-5-Image-Gallery_Frontend/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest run",
-    "build": "yarn test && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "name": "frontend",
